--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ree</title>
+    <title>About Alexa</title>
   </head>
   <body>
-    <h1>I hope this works</h1>
-    <p>It's true I hope it works. Change.</p>
+    <h1>Alexa Urrea Ferguson</h1>
+    <hr>
+    <h2>About</h2>
+    <p>I am from Texas. I love chemistry and dancing. I still feel like I am a rookie when it comes to CS, but I really do love it.</p>
+    <h2>Projects</h2>
+    <ul>
+      <li>FAIed - an AI music service that plays music based on your mood.</li>
+      <li>Bioimaging spectroscopy project.</li>
+      <li>Choreography project for my dance class!</li>
+    </ul>
+    <h2>Experience</h2>
+    <ul>
+      <li>Johnson Spectroscopy Lab.</li>
+      <li>DIPPR 801 Chemical Engineering lab.</li>
+      <li>Lupe Tortilla.</li>
+    </ul>
+    <h2>Contact</h2>
+    <ul>
+      <li>Here is my <a href='https://www.linkedin.com/in/alexa-urrea-45b0961b8/'>LinkedIn</a>.</li>
+      <li>Number: 521-1072</li>
+    </ul>
+    
   </body>
 </html>
